--- a/src/style/Work.css
+++ b/src/style/Work.css
@@ -1,6 +1,7 @@
 /* Work Portfolio Styles */
 .services {
     padding: 80px 0;
+    background-color: white;
   }
   
   .section-header {
@@ -11,8 +12,9 @@
   .tag {
     font-size: 25px;
     border-radius: 5%;
-    background-color: #9da0dd;
-    border: 2px solid white; /* Border color red */
+    background-color: #f9fafc;
+    color: #000;
+    border: 2px solid rgb(8, 8, 8); /* Border color red */
     width: 30%;
     font-family: "Bowlby One SC", sans-serif;
     font-weight: 200;
@@ -56,14 +58,16 @@
   }
   
   .projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
+    display: flex; /* Change to flex to make the projects display in a row */
+    flex-wrap: wrap; /* Allow projects to wrap to the next line if there's not enough space */
+    justify-content: space-evenly;/* Adjust spacing between projects */
+    margin-top: 20px; 
   }
   
   .project-card {
     border-radius: 10px;
     overflow: hidden;
+    height: 60;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     cursor: pointer;
@@ -75,7 +79,7 @@
   
   .project-card img {
     width: 100%;
-    height: auto;
+    height: 200px;
     border-radius: 10px 10px 0 0;
   }
   
