--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,42 +1,186 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap');
 
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
+
+
+
+/* Dark mode styles */
+.dark-mode .background {
+  background-color: #fff; /* Dark mode background color */
 }
 
-:root {
-    font-size: 15px;
+.dark-mode .navWrapper a {
+  color: #000; /* Dark mode link color */
 }
 
-html,
-body {
-    margin: 0;
-    padding: 0;
-    --color-text: #000;
-    --color-bg-view-1: white;
-    --color-bg-view-2: #6a6468;
-    --color-link: #000;
-    --color-link-hover: #000;
-    --color-button: #000;
-    --color-button-hover: #22267d;
-    color: var(--color-text);
-    background-color: var(--color-bg-view-1);
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    height: 100vh;
+.dark-mode .navWrapper a:hover {
+  color: #fff; /* Dark mode link hover color */
 }
 
-.home {
-  position: relative;
-  background-color: #111111;
-  overflow: hidden;
-  height: 100vh;
+.dark-mode .headerWrapper h1 {
+  color: #000; /* Dark mode link hover color */
+
+  
 }
+
+.dark-mode .services{
+  background-color: black;
+}
+
+* Services */
+
+.services h6 {
+  margin-bottom: 10px;
+}
+
+.services h2 {
+  margin-bottom: 10px;
+}
+
+.services .description {
+  margin-bottom: 60px;
+  width: 1000px;
+  line-height: 30px;
+}
+
+.services .grid {
+  display: grid;
+  grid-template-columns: 500px 500px;
+  grid-column-gap: 120px;
+  grid-template-rows: 150px 150px;
+  grid-row-gap: 30px;
+}
+
+.services .grid .card {
+  width: 420px;
+  padding: 43px 40px;
+  background: linear-gradient(to bottom right, #313131, #0F0F0F);
+  border-radius: 5px;
+  display: block;
+  height: 170px;
+}
+
+.services .grid .card h3 {
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.services .grid .card p {
+  color: #C3C3C3;
+  font-size: 22px;
+  font-weight: normal;
+}
+
+.square.blue { 
+  position: absolute;
+  box-shadow: 3px 3px 15px rgba(61, 178, 213, 0.4);
+  background: linear-gradient(#4F3DD5, #3DB2D5);
+  top: 100px;
+  right: 75px;
+  width: 125px;
+  height: 125px;
+  opacity: 0.01;
+  transition: all 0.05s ease;
+  transform: translateX(125px);
+}
+
+ .square.blue.in-view {
+  transform: rotate(22.5deg) translateX(0px);
+  opacity: 1;
+  transition: all 1s ease;
+}
+
+/* Responsive */
+
+@media (max-width: 1280px) {
+  
+  .services .grid {
+    display: grid;
+    grid-template-columns: 500px 500px;
+    grid-column-gap: 50px;
+    grid-template-rows: 150px 150px;
+    grid-row-gap: 30px;
+  }
+}
+
+@media (max-width: 1200px) {
+  
+  .services .sectionWrapper {
+    padding-top: 185px;
+    padding-bottom: 185px;
+  }
+  
+  .services .grid {
+    display: grid;
+    grid-template-columns: 480px;
+    grid-template-rows: 150px 150px;
+    grid-row-gap: 30px;
+  }
+  
+  .services .grid .card {
+    width: 420px;
+    padding: 43px 40px;
+    background: linear-gradient(to bottom right, #313131, #0F0F0F);
+    border-radius: 5px;
+  }
+}
+
+@media (max-width: 850px) {
+  
+  .services .sectionWrapper {
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
+  
+  h6 {
+    font-size: 20px;
+  }
+  
+  h2 {
+    font-size: 35px;
+  }
+  
+  .services .description {
+    font-size: 18px;
+    width: initial;
+  }
+  
+  .services .square.blue {
+    width: 75px;
+    height: 75px;
+  }
+   
+   .services .grid {
+    display: grid;
+    grid-template-columns: 85%;
+    grid-template-rows: initial;
+    grid-row-gap: 25px;
+  }
+  
+  .services .grid .card {
+    width: 100%;
+    padding: 31.5px 30px;
+    background: linear-gradient(to bottom right, #313131, #0F0F0F);
+    border-radius: 5px;
+    height: 80%;
+  } 
+
+  .services .grid .card h3 {
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+
+  }
+
+  .services .grid .card p {
+    color: #C3C3C3;
+    font-size: 20px;
+    font-weight: normal;
+  }
+}
+
 
 /* Added styles for centering */
 .home .container-fluid {
@@ -97,3 +241,43 @@ body {
 .mainTxt{
   font-size: 80px;
 }
+
+
+@media only screen and (max-width: 900px) {
+
+  .section{
+    top :5%;
+  }
+
+  .sectionwrapper h6{
+    font-size: 20px;
+
+  }
+   
+  .description {
+     padding-top:1%;
+     font-size: 25px;
+     padding: 0px;
+    }
+
+    .services .grid{
+      display: grid;
+      grid-template-columns: 85%;
+      grid-template-rows: initial;
+      grid-row-gap: 10px;
+    }
+
+    .card{
+      width: 50%;
+      height: 80%;
+      padding: 10px 10px;
+    }
+
+    .services .grid .card h3{
+      font-size: 15px;
+    }
+
+    .services .grid .card p{
+      font-size: 10px;
+    }
+    }
