--- a/src/style/GetinTouch.css
+++ b/src/style/GetinTouch.css
@@ -1,4 +1,3 @@
-
 /* /// clock*/
 .Bdaycontainer{
   padding-top: 10%;
@@ -50,82 +49,68 @@
 
 .header__btns {
   color: white;
-
-
 }
 
 .header__btn {
   text-decoration: none;
   color: white;
   background-color: #000;
-
-  transition:
-          all
-          var(--transition-duration)
-          var(--transition-timing-function)
-          var(--transition-delay);
+  transition: all var(--transition-duration) var(--transition-timing-function) var(--transition-delay);
   padding: 10px 20px;
   margin-right: 10px;
   background-color: var(--bg-demo-light);
   border: 2px solid #fff;
   cursor: pointer;
   outline: none;
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
 .header__btn:hover,
 .header__btn.js-active {
   width: 50px;
-	height: 50px;
-	border-radius: 50%;
+  height: 50px;
+  border-radius: 50%;
   color: white;
   background-color: #000;
 }
 
-
-
 /* // sunny day*/
 .wrapper {
-	position: relative;
+  position: relative;
 }
 
 .hero {
-	min-height: 100vh;
-	padding: clamp(1rem, 2vw, 5rem);
-	display: flex;
-	align-items: center;
+  min-height: 100vh;
+  padding: clamp(1rem, 2vw, 5rem);
+  display: flex;
+  align-items: center;
 }
 
 .hero--secondary {
-	--mask: radial-gradient(circle at var(--x, 70%) var(--y, 50%), black 25%, transparent 0);
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(45deg, #d6f42e, #e9910e, #f00404);
-	color: rgb(9, 14, 23);
-	-webkit-mask-image: var(--mask);
-	mask-image: var(--mask);
+  --mask: radial-gradient(circle at var(--x, 70%) var(--y, 50%), black 25%, transparent 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #d6f42e, #e9910e, #f00404);
+  color: rgb(9, 14, 23);
+  -webkit-mask-image: var(--mask);
+  mask-image: var(--mask);
 }
 
 .hero__heading {
   text-decoration: none;
-	font-size: clamp(2rem, 5vw, 8rem);
-	text-transform: uppercase;
-	margin: 0;
+  font-size: clamp(2rem, 5vw, 8rem);
+  text-transform: uppercase;
+  margin: 0;
   color: white;
   max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
 }
-
-
-
-
-
 
 /* ///////////////////////////// */
 .unique-mid {
@@ -148,9 +133,7 @@
   position: relative;
 }
 
-
-
-.unique-btn svg{
+.unique-btn svg {
   top: 30%;
   left: 30%;
   line-height: 80px;
@@ -237,6 +220,58 @@
   }
   100% {
     transform: rotate(0deg) scale(1.5);
+}
+}
+/* ///send CV // */
+
+.SendCV {
+  background-color: #fff;
+  text-align: center;
+  padding: 2rem 0;
+}
+
+.modal-email {
+  background-color: #fff;
+  height: auto;
+  width: auto;
+  margin: 0 auto;
+  padding: 2rem;
+  font-family: Lato;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: inline-block;
+}
+
+.mail-input {
+  width: 232px;
+  padding: 0 15px;
+  height: 33px;
+  border: 1px solid black;
+  background: transparent;
+  border-radius: 18px;
+  outline: none;
+  margin-right: 1rem;
+  &::placeholder {
+    color: rgb(17, 16, 16);
   }
 }
 
+.btn-mail-receive {
+  width: 150px;
+  height: 37px;
+  border-radius: 18px;
+  color: white;
+  background: black;
+  border-color: black;
+  cursor: pointer;
+  outline: none;
+  display: inline-block;
+}
+
+/* Footer Section Styling */
+.footer {
+  background: #222;
+  color: #fff;
+  padding: 2rem 0;
+  text-align: center;
+}
