--- a/src/style/Work.css
+++ b/src/style/Work.css
@@ -1,12 +1,16 @@
 /* Work Portfolio Styles */
 .services {
     padding: 80px 0;
-    background-color: white;
+    background-color: black;
   }
   
   .section-header {
     text-align: center;
     margin-bottom: 50px;
+  }
+  .section-header h2{
+    color: white;
+
   }
   
   .tag {
@@ -21,6 +25,8 @@
     margin-bottom: 0;
     position: relative;
     text-decoration: none;
+    padding: 5px;
+    border-radius: 10%;
   }
   
 
@@ -35,14 +41,14 @@
     border: 2px solid #4CAF50;
     border-radius: 25px;
     background-color: transparent;
-    color: #4CAF50;
+    color: #f8f9f8;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
   }
   
   .filter:hover {
-    background-color: #4CAF50;
+    background-color: #090909;
     color: #fff;
   }
   
@@ -89,17 +95,18 @@
   
   .project-info span {
     font-size: 14px;
-    color: #777;
+    color: #fff;
   }
   
   .project-info h3 {
     font-size: 20px;
+    color: #fff;
     margin: 10px 0;
   }
   
   .project-info p {
     font-size: 16px;
-    color: #555;
+    color: #fff;
   }
   
 
