--- a/src/style/Work.css
+++ b/src/style/Work.css
@@ -64,10 +64,11 @@
   }
   
   .projects {
-    display: flex; /* Change to flex to make the projects display in a row */
-    flex-wrap: wrap; /* Allow projects to wrap to the next line if there's not enough space */
-    justify-content: space-evenly;/* Adjust spacing between projects */
-    margin-top: 20px; 
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: space-around;
+    margin-left: 5px; 
+    padding-left: 5px;
   }
   
   .project-card {
