--- a/src/style/home.css
+++ b/src/style/home.css
@@ -153,3 +153,147 @@
   text-decoration: none;
   color: black;
   }
+
+/* 
+  ////tooltip// */
+  .toolimg{
+    width: 20px;
+  }
+  
+  /* page container only added for codepen */
+  .tooltipcontainer {
+    width: 100%;
+    padding-top: 200px;
+    text-align: center;
+  }
+  
+  /* inner container */
+  .tooltip-cont {
+    position: relative;
+    display: inline-block;
+    padding-right: 10px;
+  }
+  
+  /* tt-text = tool tip text */
+  .tooltip-cont .tt-text {
+      font-family: verdana;
+      font-size: 13px;
+      visibility: hidden;
+      min-width: 100%;
+  /*     Cannot use fixed width for this. Refactor to provide logic pertaining to viewport size. */
+      width: 300px;
+      background-color: #555;
+      color: #fff;
+      text-align: center;
+      padding: 10px 20px;
+      border-radius: 2px;
+  
+      /* text positioning */
+      position: absolute;
+      z-index: 1;
+    
+      /* For width @ 450px */
+      bottom: 125%;
+      left: -565%;
+      margin-left: -60px;
+  
+      /* fade em in */
+      opacity: 0;
+      transition: opacity 1s;
+  }
+  
+  /* tt-triangle */
+  .tooltip-cont .tt-text::after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      margin-left: -10px;
+      border-width: 10px;
+      border-style: solid;
+      border-color: #555 transparent transparent transparent;
+  }
+  
+  /* Show tooltip when hovering or active (touch devices) */
+  .tooltip-cont:hover .tt-text,
+  .tooltip-cont:active .tt-text{
+      visibility: visible;
+      opacity: 1;
+  }
+  
+  @media (max-width: 240px) {
+    .tooltip-cont .tt-text {
+      width: 200px;
+    }
+  }
+  @media (min-width: 241px) and (max-width: 319px) {
+     .tooltip-cont .tt-text {
+      width: 238px;
+    }
+  }
+  @media (min-width: 320px) and (max-width: 767px) {
+     .tooltip-cont .tt-text {
+      width: 318px;
+    }
+  }
+  @media (min-width: 768px) {
+     .tooltip-cont .tt-text {
+      width: 450px;
+    }
+  }
+
+  
+@media only screen and (max-width: 900px) {
+   
+ #logo{
+  color: #fff;
+    font-size: 20px;
+    font-family: "Pacifico";
+    font-weight: normal;
+    text-decoration: none;
+    z-index: 2;
+ }
+
+ .right{
+  padding-right: 20px;
+ }
+ .headerWrapper h1{
+  position: static;
+  padding: 0;
+  font-size: 30px;
+ }
+
+ .button{
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  appearance: none;
+  width: 100px;
+  font-size: 20px;
+  background-color: #eab308;
+  display: inline-block;
+  border-radius: 20px;
+  text-decoration: none;
+  color: white;
+ }
+
+ .button::after {
+  content: "";
+  box-shadow: 0px 0px 23px 0px #FDFCA9 inset, 0px 0px 8px 0px #FFFFFF42;
+  transition: opacity 0.3s;
+  position: absolute;
+
+}
+
+.background{
+  width: 100vw;
+  height: 50vh;
+  min-height: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  flex-direction: column;
+}
+    }
+    
