--- a/src/style/GetinTouch.css
+++ b/src/style/GetinTouch.css
@@ -156,7 +156,20 @@
   width: 0%;
   height: 0%;
   border-radius: 30%;
-  background: #e67e22;
+  background: #693507;
+  z-index: -1;
+  transition: 0.7s width, 0.7s height;
+}
+.unique-git:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0%;
+  height: 0%;
+  border-radius: 30%;
+  background: #0b0b0b;
   z-index: -1;
   transition: 0.7s width, 0.7s height;
 }
