--- a/src/style/Clockbox.css
+++ b/src/style/Clockbox.css
@@ -77,7 +77,7 @@ img {
     transform: translateY(-50%);
     cursor: pointer;
 }
-/*-----*/
+
 
 .signboard {
     width: 100px;
@@ -86,7 +86,7 @@ img {
     color: #fff;
     border-radius: 10px;
 }
-/*-----*/
+
 
 .front {
     position: absolute;
@@ -118,7 +118,7 @@ img {
     transform: rotate(5deg) translate(-4px, 4px);
     background: #0f0f10;
 }
-/*-----*/
+
 
 .outer:hover .inner {
     -webkit-transform: rotate(0) translate(0);
@@ -127,7 +127,6 @@ img {
     -o-transform: rotate(0) translate(0);
     transform: rotate(0) translate(0);
 }
-/*-----*/
 
 .outer:active .inner {
     -webkit-transform: rotate(0) translate(0) scale(0.9);
@@ -164,7 +163,7 @@ img {
     -o-transform: rotate(5deg) translateX(-80px) scale(0.9);
     transform: rotate(5deg) translateX(-80px) scale(0.9);
 }
-/*-----*/
+
 
 .outer:active .calendarMain {
     -webkit-transform: scale(1.8);
@@ -188,7 +187,7 @@ img {
     visibility: visible;
     letter-spacing: 3px;
 }
-/*-----*/
+
 
 .calendarMain {
     width: 100%;
@@ -211,7 +210,7 @@ img {
     text-transform: uppercase;
     letter-spacing: 3px;
 }
-/*-----*/
+
 
 .clock {
     width: 100%;
@@ -226,7 +225,7 @@ img {
     opacity: 0;
     visibility: hidden;
 }
-/*-----*/
+
 
 .year {
     width: 100%;
@@ -264,9 +263,6 @@ img {
 .month2 {
     color: #fff;
 }
-/* -- usable codes end -- */
-
-/* -- unusable codes (text, logo, etc.) -- */
 
 .info {
     width: 100%;
@@ -320,7 +316,7 @@ em {
     position: relative;
     border-radius: 100%;
     margin: auto;
-    color: fff;
+    color: #fff;
 }
 .designer a:after {
     content: "see designs";
