--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -25,8 +25,8 @@
 
 .contact-left h1{
     border-radius: 5%;
-    color: #dbb418; /* Text color red */
-    border: 2px solid #dbb418; /* Border color red */
+    color: #dbb418; 
+    border: 2px solid #dbb418;
     width: 70%;
     font-family: "Bowlby One SC", sans-serif;
     font-weight: 300;
@@ -73,29 +73,27 @@
     width: 140px;
     height: 50px;
     border-radius: 10%;
-    background: #dbb418;
+    background-color: #dbb418;
     z-index: 100;
     cursor: pointer;
-    transition: 0.4s ease;
+    transition: all 0.4s ease;
     filter: url("#goo");
+}
 
-    p {
-        color: #913b72;
-        font-size: 22px;
-        line-height: 1;
-        -webkit-user-select: none; /* Safari */
-        -ms-user-select: none; /* IE 10 and IE 11 */
-        user-select: none; /* Standard syntax */
-    }
+.btn p {
+    color: #913b72;
+    font-size: 22px;
+    line-height: 1;
+    user-select: none; /* covers -webkit-user-select and -ms-user-select */
+}
 
-    &:hover {
-        box-shadow: 0px 1px 9px #80ece9;
-    }
+.btn:hover {
+    box-shadow: 0px 1px 9px #80ece9;
+}
 
-    &:active {
-        transform: scale(0.9);
-        box-shadow: -2px 2px 23px #80ece9;
-    }
+.btn:active {
+    transform: scale(0.9);
+    box-shadow: -2px 2px 23px #80ece9;
 }
 
 particle {
@@ -132,20 +130,20 @@ svg {
   .email-link {
     display: inline-flex;
     align-items: center;
-    color: #a1a1a1; /* text-neutrals-300 */
+    color: #a1a1a1; 
     transition: color 0.3s ease;
 }
 
 .email-link:hover,
 .email-link:focus-visible {
-    color: #f5f5f5; /* text-neutrals-50 */
+    color: #f5f5f5;
 }
 
 .email-link svg {
-    margin-right: 0.5rem; /* me-2 */
+    margin-right: 0.5rem; 
     display: inline;
-    width: 1.25rem; /* size-5 */
-    height: 1.25rem; /* size-5 */
+    width: 1.25rem; 
+    height: 1.25rem; 
 }
 
 
@@ -153,8 +151,8 @@ svg {
    
 .contact-left h1{
     border-radius: 5%;
-    color: #dc3545; /* Text color red */
-    border: 2px solid #dc3545; /* Border color red */
+    color: #dc3545;
+    border: 2px solid #dc3545; 
     width: 80%;
     font-family: "Bowlby One SC", sans-serif;
     font-weight: 200;
