--- a/src/style/About.css
+++ b/src/style/About.css
@@ -16,24 +16,24 @@ img {
      object-fit: cover;
 }
 
-.container {
+.AboutClasscontainer {
   max-width: 1300px;
   margin: 0px auto 0px auto;
   padding: 0px 40px;
 }
 @media (min-width: 1200px) and (max-width: 1441px) {
-  .container {
+  .AboutClasscontainer {
     max-width: 1250px;
     padding: 0px 36px;
   }
 }
 @media (max-width: 767px) {
-  .container {
+  .AboutClasscontainer {
     padding: 0px 30px;
   }
 }
 @media (max-width: 479px) {
-  .container {
+  .AboutClasscontainer {
     padding: 0px 30px 0px 20px;
   }
 }
