--- a/src/style/Work.css
+++ b/src/style/Work.css
@@ -52,7 +52,7 @@
   }
   
   .container {
-    width: 90%;
+    width: 100%;
     margin: auto;
   }
   
@@ -73,7 +73,7 @@
   .project-card {
     border-radius: 10px;
     overflow: hidden;
-
+    padding-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     cursor: pointer;
