--- a/src/style/home.css
+++ b/src/style/home.css
@@ -241,6 +241,13 @@
 
   
 @media only screen and (max-width: 900px) {
+  .headerWrapper {
+    padding-top: 200px;
+}
+
+  .header{
+    justify-content: center ;
+  }
    
  #logo{
   color: #fff;
@@ -255,9 +262,8 @@
   padding-right: 20px;
  }
  .headerWrapper h1{
-  position: static;
-  padding: 0;
-  font-size: 30px;
+
+  font-size: 50px;
  }
 
  .button{
@@ -265,7 +271,7 @@
   text-decoration: none;
   text-align: center;
   appearance: none;
-  width: 100px;
+  width: 200px;
   font-size: 20px;
   background-color: #eab308;
   display: inline-block;
